Fix banner title overlapping with description on small screens

--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -44,10 +44,13 @@
       font-weight: 700;
       letter-spacing: 0.05rem;
       line-height: 1;
-      height: 12.5rem;
+      min-height: 12.5rem; 
+      height: auto; 
 
       @media screen and (max-width: 768px)  {
         height: 15rem;
+        min-height: 15rem;
+        font-size: 3rem;
       }
 
       .wrap {
